tests/integrations/snapshots/integrations__task_prints_to_stderr@status_code.snap
---
source: tests/integrations/main.rs
description: "Should exit sucessfully after redirecting the task's output to stdout."
---
Some(
    0,
)
