tests/integrations/snapshots/integrations__task_prints_to_stderr@stderr.snap
---
source: tests/integrations/main.rs
description: "Should exit sucessfully after redirecting the task's output to stdout."
---

