tests/integrations/snapshots/integrations__task_prints_to_stderr@stdout.snap
---
source: tests/integrations/main.rs
description: "Should exit sucessfully after redirecting the task's output to stdout."
---
     ╭─┬◀ starting
task │E│ hello world
     ╰─┴▶ success
