tests/integrations/snapshots/integrations__task_unknown_fields@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about unknown fields.
---
Errors:
╰─► failed to load the Engage file
    ╰─► failed to deserialize the Engage file
        ╰─► TOML parse error at line 2, column 1
  |
2 | foo = "bar"
  | ^^^
unknown field `foo`, expected one of `command`, `environment`, `after`, `before`
