tests/integrations/snapshots/integrations__task_unknown_fields@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about unknown fields.
---

