tests/integrations/snapshots/integrations__tasks_dependency_cycle@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about dependency cycles.
---
Some(
    2,
)
