tests/integrations/snapshots/integrations__tasks_dependency_cycle_dot@stdout.snap
---
source: tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
digraph {
    0 [ label = "group start: group a" ]
    1 [ label = "group end: group a" ]
    2 [ label = "task: task a" ]
    3 [ label = "task: task b" ]
    4 [ label = "group start: group b" ]
    5 [ label = "group end: group b" ]
    6 [ label = "task: task a" ]
    7 [ label = "task: task b" ]
    8 [ label = "task: task c" ]
    3 -> 2 [ label = "1" ]
    2 -> 3 [ label = "1" ]
    8 -> 6 [ label = "1" ]
    7 -> 8 [ label = "1" ]
    6 -> 7 [ label = "1" ]
}
