tests/integrations/snapshots/integrations__tasks_dependency_cycle_self_loop@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about dependency cycles.
---
Errors:
╰─► failed to run the graph
    ╰─► the graph is not acyclic
        ╰─► `b` depends on itself
