tests/integrations/snapshots/integrations__try_nonexistent_both@status_code.snap
---
source: tests/integrations/main.rs
description: "Should exit with an error about, at least, the requested group not existing."
---
Some(
    2,
)
