tests/integrations/snapshots/integrations__try_nonexistent_both@stderr.snap
---
source: tests/integrations/main.rs
description: "Should exit with an error about, at least, the requested group not existing."
---
Errors:
╰─► no such group "doesnt"
